--- a/build.gradle
+++ b/build.gradle
@@ -23,6 +23,9 @@ ext {
     rxJavaVersion = '2.1.10'
     androidBindingVersion ='3.0.0'
     archComponents = '1.0.0'
+    daggerVersion = '2.15'
+    javaInjectVersion ='1'
+    retrofitVersion = '2.4.0'
 
 
 
@@ -36,9 +39,11 @@ ext {
             archComponentsCompiler:  "android.arch.lifecycle:compiler:$archComponents",
             rxandroid : "io.reactivex.rxjava2:rxandroid:2.0.2",
             rxjava :  "io.reactivex.rxjava2:rxjava:$rxJavaVersion",
+            dagger: "com.google.dagger:dagger:$daggerVersion",
+            daggerCompiler:  "com.google.dagger:dagger-compiler:$daggerVersion",
+            javaxInject: "javax.inject:javax.inject:${javaInjectVersion}",
 
-
-
+            retrofit: "com.squareup.retrofit2:retrofit:$retrofitVersion",
             jUnit :  "junit:junit:4.12",
             glide : "com.github.bumptech.glide:glide:4.6.1",
             glidecompiler : "com.github.bumptech.glide:compiler:4.6.1",
